# drone-2024

./: .gitignore  .gitmodules  Emily.txt  Emma.txt  Peiyan.txt  README.md  camera_video.py  compose.yml  gara.txt  model.sdf
World/: empty_world  test_track  vtol_example
camera_src/: model.config
camera_src/camera/: model.config
lidar_src/: lidar.world
lidar_src/basic_lidar/: model.config
misc/: Bora.txt  Celia.txt  Peiyan.txt  Roy.txt
models/: README.md  sitl_targets_gazebo-classic.cmake
models/Model/: vtol_example
models/airframe/: 22001_gazebo-classic_iris_lidar  CMakeLists.txt
models/camera_src/camera/: model.sdf
models/iris_lidar/: iris_lidar.sdf  model.config  model.sdf
models/lidar/: model.sdf
models/lidar_src/basic_lidar/: model.sdf
models/world/: default.sdf
off_board_ws/src/: holder.txt
off_board_ws/src/gui_drone/: CMakeLists.txt  package.xml
off_board_ws/src/gui_drone/include/gui_drone/: gui_node.hpp
off_board_ws/src/gui_drone/src/: gui_node.cpp
off_board_ws/src/gui_drone/src/custom_widgets/: lineedit.cpp
off_board_ws/src/ikram-gui/: README.md  package.xml  setup.cfg  setup.py
off_board_ws/src/ikram-gui/ikram-gui/: gui_topic.py
onboard_ws/: README.md  full_vtol_mission_test.sh  fw_silence_then_carry_on.sh  fw_waypoint_then_silence_test.sh  offboard_node_test1.sh  offboard_node_test2.sh  payload_controls  qc_waypoint_then_silence_test.sh  tmux_start_script.sh
onboard_ws/airdrop_code/: README.md  micro-ros_subscriber.ino
onboard_ws/computer_vision_script/: camera_video_v2.py
onboard_ws/qol_scripts/: drone_tmux_start_script.sh  sim_tmux_start_script.sh  tmux_start_script.sh
onboard_ws/src/computer_vision/: package.xml  setup.cfg  setup.py
onboard_ws/src/computer_vision/computer_vision/: alphanumeric_trainer_yolo.py  config.yaml  data.yaml  dummy_cv.py  main.py  test.csv  testing.py  util.py  yolo_training.py
onboard_ws/src/computer_vision/computer_vision/alphanumeric_training/: README.dataset.txt  README.roboflow.txt
onboard_ws/src/computer_vision/computer_vision/labels/: train.cache
onboard_ws/src/custom_msgs/: CMakeLists.txt  package.xml
onboard_ws/src/custom_msgs/msg/: Action.msg  GlobalCoordinates.msg  ListGlobalCoordinates.msg  ListTargets.msg  Target.msg  VehicleInfo.msg  Waypoint.msg
onboard_ws/src/custom_msgs/srv/: RequestAction.srv  SendAction.srv  SendFloat.srv  SendInt.srv  SendWaypoint.srv
onboard_ws/src/mission_manager/: README.md  package.xml  setup.cfg  setup.py
onboard_ws/src/mission_manager/mission_manager/: mission.py  mission_json_runner.py
onboard_ws/src/mission_manager/resource/: big_field_mission.json  boundary.kml  comp_boundary.json  mult_lap_point_mission.json  sim_boundary.json  testing_survey.json  upper_field_boundary.kml  upper_field_mission.json
onboard_ws/src/path_planner/: README.md  package.xml  setup.py
onboard_ws/src/path_planner/path_planner/: local_planner.py
onboard_ws/src/px4_offboard_control/: README.md  package.xml  setup.cfg  setup.py
onboard_ws/src/px4_offboard_control/px4_offboard_control/: offboard_node.py
onboard_ws/src/px4_offboard_control_imad/: package.xml  setup.cfg  setup.py
onboard_ws/src/px4_offboard_control_imad/px4_offboard_control_imad/: offboard_node.py  offboard_node_v2.py
onboard_ws/src/ros_gazebo_bridge/: CMakeLists.txt  README.md  package.xml
onboard_ws/src/ros_gazebo_bridge/src/: lidar_bridge.cpp
onboard_ws/src/testing_publishers/: package.xml  setup.cfg  setup.py
onboard_ws/src/testing_publishers/testing_publishers/: publisher_member_function.py
onboard_ws/src/urg_node2/launch/: urg_node2.launch.py
onboard_ws/testing_scripts/: obstacle_avoidance_test_1.sh  obstacle_avoidance_test_2.sh  qc_waypoint_then_silence_test.sh  simple_qc_mission_test.sh
simulation/: README.md
simulation/drone_gazebo/: CMakeLists.txt
simulation/drone_gazebo/models/alphanumeric/: 3.stl  5.stl  6.stl  9.stl  B.stl  C.stl  D.stl  G.stl  H.stl  K.stl  O.stl  Q.stl  U.stl  X.stl  Y.stl
simulation/drone_gazebo/models/arboretum_map/: model.config  model.sdf
simulation/drone_gazebo/models/auvsi_suas_map/: model.config
simulation/drone_gazebo/models/gooney3/: model.sdf
simulation/drone_gazebo/models/gopro_camera/: model.sdf
simulation/drone_gazebo/models/martlet1/: model.config
simulation/drone_gazebo/models/plane/: model.sdf
simulation/drone_gazebo/models/ptgrey_75mm_camera/: model.config
simulation/drone_gazebo/models/ptgrey_8mm_camera/: model.sdf
simulation/drone_gazebo/models/reservoir_map/: model.config  model.sdf
simulation/drone_gazebo/models/water_bottle/: model.sdf  water_bottle.stl
simulation/drone_gazebo/plugins/: gimbal_control_plugin.cc
simulation/drone_gazebo/src/odlc/: model_generator.py
simulation/drone_gazebo/srv/: SpawnObject.srv
simulation/drone_gazebo/worlds/: arboretum.world  auvsi_suas.world  empty.world  reservoir.world  wimac.world
simulation_2018/: README.md
simulation_2018/drone_gazebo/: README.md  package.xml  setup.py
simulation_2018/drone_gazebo/launch/: drone_gazebo.launch
simulation_2018/drone_gazebo/models/alphanumeric/: 0.stl  2.stl  4.stl  7.stl  8.stl  E.stl  F.stl  I.stl  J.stl  M.stl  P.stl  R.stl  T.stl  V.stl  W.stl  Z.stl
simulation_2018/drone_gazebo/models/auvsi_suas_map/: model.sdf
simulation_2018/drone_gazebo/models/gooney3/: model.config
simulation_2018/drone_gazebo/models/gooney4/: model.config  model.sdf
simulation_2018/drone_gazebo/models/gopro_camera/: model.config
simulation_2018/drone_gazebo/models/martlet1/: model.sdf
simulation_2018/drone_gazebo/models/ptgrey_75mm_camera/: model.sdf
simulation_2018/drone_gazebo/models/ptgrey_8mm_camera/: model.config
simulation_2018/drone_gazebo/models/water_bottle/: model.config
simulation_2018/drone_gazebo/models/water_bottle/materials/scripts/: water_bottle.material
simulation_2018/drone_gazebo/plugins/: CMakeLists.txt  gimbal_control_plugin.hh
simulation_2018/drone_gazebo/scripts/: bottle_dropper.py  object_generator.py
simulation_2018/drone_gazebo/srv/: DropBottle.srv
(+52 files in other folders)
