<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gazebo_bridge</name>
  <version>0.0.0</version>
  <description>Package containing node capable of bridging gazebo topic to a ros topic, specially
    for LaserScan type</description>
  <maintainer email="imad.issafras@mail.mcgill.ca">unhappysquid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gz-transport12</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
